infra/k8s/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/skkuding/codedang-frontend
          ports:
            - containerPort: 5525
          resources:
            limits:
              cpu: 1
              memory: 2Gi
            requests:
              cpu: 0.2
              memory: 200Mi
